--- a/src/main/resources/product_form.fxml
+++ b/src/main/resources/product_form.fxml
@@ -1,14 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="controller.ProductFormController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="439.0" prefWidth="696.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ProductFormController">
+   <children>
+      <TableView fx:id="tblProduct" layoutX="14.0" layoutY="213.0" prefHeight="200.0" prefWidth="652.0">
+        <columns>
+          <TableColumn fx:id="colId" prefWidth="48.6666898727417" text="ID" />
+          <TableColumn fx:id="colName" prefWidth="78.6666488647461" text="Name" />
+            <TableColumn fx:id="colCategory" prefWidth="66.66668701171875" text="Category" />
+            <TableColumn fx:id="colSize" prefWidth="54.66670227050781" text="Size" />
+            <TableColumn fx:id="colPrice" prefWidth="69.3333740234375" text="Price" />
+            <TableColumn fx:id="colQty" prefWidth="42.6666259765625" text="QtyOnHand" />
+            <TableColumn fx:id="colImagePath" text="Img Path" />
+            <TableColumn fx:id="colSupplier" prefWidth="83.33334350585938" text="Supplier" />
+            <TableColumn fx:id="colDesc" prefWidth="158.6666259765625" text="Description" />
+        </columns>
+      </TableView>
+      <TextField fx:id="txtId" layoutX="58.0" layoutY="65.0" promptText="Name" />
+      <TextField fx:id="txtCategory" layoutX="58.0" layoutY="107.0" promptText="Category" />
+      <TextField fx:id="txtSize" layoutX="58.0" layoutY="154.0" promptText="Size" />
+      <TextField fx:id="txtPrice" layoutX="227.0" layoutY="65.0" promptText="Price" />
+      <TextField fx:id="txtQtyOnHand" layoutX="227.0" layoutY="107.0" promptText="Quantity On Hand" />
+      <TextField fx:id="txtImgPath" layoutX="227.0" layoutY="154.0" promptText="Image Path" />
+      <TextField fx:id="txtDesc" layoutX="411.0" layoutY="119.0" promptText="Description" />
+      <TextField fx:id="txtSupplier" layoutX="411.0" layoutY="75.0" promptText="Supplier" />
+      <Button layoutX="385.0" layoutY="179.0" mnemonicParsing="false" onAction="#btnAddOnAction" text="Add" />
+      <Button layoutX="449.0" layoutY="179.0" mnemonicParsing="false" onAction="#btnEditOnAction" text="Edit" />
+      <Button layoutX="516.0" layoutY="179.0" mnemonicParsing="false" onAction="#btnDeleteOnAction" text="Delete" />
+   </children>
 </AnchorPane>
