--- a/src/main/resources/product_form.fxml
+++ b/src/main/resources/product_form.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -28,12 +29,12 @@
       <TextField fx:id="txtQtyOnHand" layoutX="227.0" layoutY="107.0" promptText="Quantity On Hand" />
       <TextField fx:id="txtImgPath" layoutX="227.0" layoutY="154.0" promptText="Image Path" />
       <TextField fx:id="txtDesc" layoutX="411.0" layoutY="119.0" promptText="Description" />
-      <TextField fx:id="txtSupplier" layoutX="411.0" layoutY="75.0" promptText="Supplier" />
       <Button layoutX="385.0" layoutY="179.0" mnemonicParsing="false" onAction="#btnAddOnAction" text="Add" />
       <Button layoutX="431.0" layoutY="179.0" mnemonicParsing="false" onAction="#btnEditOnAction" text="Edit" />
       <Button layoutX="529.0" layoutY="179.0" mnemonicParsing="false" onAction="#btnDeleteOnAction" text="Delete" />
       <Button layoutX="583.0" layoutY="179.0" mnemonicParsing="false" onAction="#btnRefreshTableOnAction" text="RefreshTable" />
       <Button layoutX="470.0" layoutY="179.0" mnemonicParsing="false" onAction="#btnUpdateOnAction" prefHeight="25.0" prefWidth="57.0" text="Update" />
       <TextField fx:id="txtId" disable="true" layoutX="58.0" layoutY="29.0" prefHeight="25.0" prefWidth="65.0" />
+      <ComboBox fx:id="cmbSupplier" layoutX="505.0" layoutY="42.0" prefWidth="150.0" />
    </children>
 </AnchorPane>
